force-app/main/default/objects/Spread_Line_Mapping__mdt/Spread_Line_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Deployable parser mappings between extracted statement labels and normalized spread lines.</description>
    <label>Spread Line Mapping</label>
    <pluralLabel>Spread Line Mappings</pluralLabel>
</CustomObject>