force-app/main/default/objects/Spread_Line_Mapping__mdt/fields/Accepted_Label__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Label__c</fullName>
    <label>Accepted Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>