force-app/main/default/objects/Spread_Line_Mapping__mdt/fields/Material_Default__c.field-meta.xml
<CustomField>
    <fullName>Material_Default__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Material Default</label>
    <type>Checkbox</type>
</CustomField>