force-app/main/default/objects/Spread_Line_Mapping__mdt/fields/Normalized_Line__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Line__c</fullName>
    <label>Normalized Line</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>