force-app/main/default/objects/Spread_Line_Mapping__mdt/fields/Prompt_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Guidance__c</fullName>
    <label>Prompt Guidance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>