force-app/main/default/objects/Spread_Line_Mapping__mdt/fields/Requires_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Requires_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Reviewer</label>
    <type>Checkbox</type>
</CustomField>